crates/kirin-derive-interpreter-new/src/snapshots/kirin_derive_interpreter_new__interpretable__tests__interpretable_enum_level_wraps.snap
---
source: crates/kirin-derive-interpreter-new/src/interpretable.rs
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<__InterpL, T: CompileTimeValue, __InterpI, __InterpF, __InterpC, __InterpE, __InterpT>
    ::kirin_interpreter_new::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    > for Lexical<T>
where
    __InterpL: ::kirin::ir::Dialect,
    Function<T>: ::kirin_interpreter_new::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
    Call<T>: ::kirin_interpreter_new::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
    Return<T>: ::kirin_interpreter_new::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
{
    fn interpret(
        &self,
        location: ::kirin_interpreter_new::Location,
        env: ::kirin_interpreter_new::EnvIndex,
        interp: &mut __InterpI,
    ) -> Result<::kirin_interpreter_new::StatementEffect<__InterpF, __InterpC, __InterpT>, __InterpE>
    {
        match self {
            Self::Function(field_0) => <Function<T> as ::kirin_interpreter_new::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
            Self::Call(field_0) => <Call<T> as ::kirin_interpreter_new::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
            Self::Return(field_0) => <Return<T> as ::kirin_interpreter_new::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
        }
    }
}
